[gd_scene load_steps=7 format=3 uid="uid://h17puraebncd"]

[ext_resource type="Script" uid="uid://dk2qjfi0tvwlp" path="res://scripts/player/egg.gd" id="1_eb0g5"]
[ext_resource type="Texture2D" uid="uid://cii47wtsuo8q1" path="res://assets/graphics/egg/egg_img.png" id="2_eb0g5"]
[ext_resource type="Texture2D" uid="uid://cwoo5r88f5cqs" path="res://assets/graphics/jetpack/jetpack_left.png" id="3_eb0g5"]
[ext_resource type="Texture2D" uid="uid://c1rww8piheekw" path="res://assets/graphics/jetpack/jetpack_right.png" id="4_5w8ku"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_eb0g5"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:linear_velocity")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6upkn"]
radius = 110.0
height = 262.0

[node name="Egg" type="RigidBody2D"]
gravity_scale = 1.2
center_of_mass_mode = 1
center_of_mass = Vector2(0, 40)
contact_monitor = true
max_contacts_reported = 8
linear_damp = 0.3
angular_damp = 0.1
script = ExtResource("1_eb0g5")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_eb0g5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6upkn")
one_way_collision_margin = 0.0

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("2_eb0g5")
offset = Vector2(-4, 0)

[node name="JetpackLeft" type="Node2D" parent="Visuals"]

[node name="Sprite2D" type="Sprite2D" parent="Visuals/JetpackLeft"]
position = Vector2(-150, 80)
texture = ExtResource("3_eb0g5")

[node name="AnimationTimer" type="Timer" parent="Visuals/JetpackLeft"]
wait_time = 0.1

[node name="FuelBarLeft" type="ProgressBar" parent="Visuals/JetpackLeft"]
offset_left = -300.0
offset_top = -150.0
offset_right = -250.0
offset_bottom = 150.0
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="JetpackRight" type="Node2D" parent="Visuals"]

[node name="Sprite2D" type="Sprite2D" parent="Visuals/JetpackRight"]
position = Vector2(150, 80)
texture = ExtResource("4_5w8ku")

[node name="AnimationTimer" type="Timer" parent="Visuals/JetpackRight"]
wait_time = 0.1

[node name="FuelBarRight" type="ProgressBar" parent="Visuals/JetpackRight"]
offset_left = 300.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0
scale = Vector2(-1, 1)
fill_mode = 3
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="Visuals"]
zoom = Vector2(0.2, 0.2)
